k8s/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: spring-auth-container
          image: 192.168.0.212:5555/spring-auth:20240812-192240
          ports:
            - name: grpc
              containerPort: 3092
          volumeMounts:
            - name: auth-logs
              mountPath: /usr/src/main/logs
          livenessProbe:
            exec:
              command:
                - /app/grpc-health-probe
                - -addr=:3092
                - -rpc-timeout=2s
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            exec:
              command:
                - /app/grpc-health-probe
                - -addr=:3092
                - -rpc-timeout=2s
            initialDelaySeconds: 10
            periodSeconds: 30

        - name: mysql-master-container
          image: 192.168.0.212:5555/mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: auth-mysql-master-data
              mountPath: /var/lib/mysql

        - name: phpmyadmin-container
          image: 192.168.0.212:5555/phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
        - name: fluent-bit
          image: 192.168.0.212:5555/fluent/fluent-bit
          volumeMounts:
            - name: auth-fluent-config
              mountPath: /fluent-bit/etc/fluent-bit.conf
              subPath: fluent-bit.conf
            - name: auth-logs
              mountPath: /usr/src/main/logs

      volumes:
        - name: auth-logs
          persistentVolumeClaim:
            claimName: auth-logs-pvc
        - name: auth-mysql-master-data
          persistentVolumeClaim:
            claimName: auth-mysql-master-data-pvc
        - name: auth-fluent-config
          configMap:
            name: auth-fluent-bit-config
