k8s/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-phpmyadmin-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /phpmyadmin-auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-phpmyadmin-service
                port:
                  number: 3080
